--- a/blogpst.html
+++ b/blogpst.html
@@ -4,7 +4,11 @@
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
-        <h1>Este es un h1</h1>
-        <p>Esto es un parrafo</p>
+        <div id="container">
+            <div id="post">
+                <h1>Este es un titulo atractivo e interesante de este post</h1>
+                <p>Esto es un parrafo donde vamos a explicar las cosas interesantes que se pueden hacer con las ramas</p>
+            </div>
+        </div>
     </body>
 </html>
