--- a/blogpst.html
+++ b/blogpst.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <div id="container">
+            <div id="Cabezera">
+                Aqui empieza la cabezera
+            </div>
             <div id="post">
                 <h1>Este es un titulo atractivo e interesante de este post</h1>
                 <p>Esto es un parrafo donde vamos a explicar las cosas interesantes que se pueden hacer con las ramas</p>
