--- a/blogpst.html
+++ b/blogpst.html
@@ -8,6 +8,7 @@
             <div id="post">
                 <h1>Este es un titulo atractivo e interesante de este post</h1>
                 <p>Esto es un parrafo donde vamos a explicar las cosas interesantes que se pueden hacer con las ramas</p>
+                <p>este es un segundo parrafo para probar que onda</p>
             </div>
         </div>
     </body>
