--- a/blogpst.html
+++ b/blogpst.html
@@ -6,7 +6,7 @@
     <body>
         <div id="container">
             <div id="Cabezera">
-                Hyperblog
+                Cabezera
             </div>
             <div id="post">
                 <h1>Este es un titulo atractivo e interesante de este post</h1>
